Fix center nav-links on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ html {
     font-size: 2.4rem;
     background-color: rgba(255, 255, 255, 0.95);
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     border-top-left-radius: 100%;
     border-bottom-left-radius: 100%;
     position: absolute;
