--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -46,7 +46,7 @@
             font-size: fontSize(level_4);
             background-color: rgba(255, 255, 255, 0.95);
             width: 100%;
-            height:100vh;
+            height:90vh;
             border-top-left-radius: 100%;
             border-bottom-left-radius: 100%;
             position:absolute;
